--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">
+    <string name="staking_alert_bond_more_title">Stake more tokens</string>
+<!--    <string name="staking_alert_bond_more_title">Bond more tokens.</string>-->
+
+    <!--    <string name="staking_bonded_format">Bonded: %s</string>-->
+
+    <string name="staking_alert_bond_more_message">Your stake is less then minimum of %s.\nHaving stake less than minimum increases chances of staking to not generate rewards</string>
+<!--    <string name="staking_alert_bond_more_message">Staking is currently inactive.\nCurrent minimal stake is %s.</string>-->
+
     <string name="staking_rebag_current_bag">Current queue slot</string>
     <string name="staking_rebag_new_bag">New queue slot</string>
 
@@ -1065,8 +1073,6 @@
     <string name="staking_about">About staking</string>
     <string name="staking_account_is_used_as_controller">Selected account is already in use as controller</string>
     <string name="staking_add_controller">Add controller account %s to the application to perform this action.</string>
-    <string name="staking_alert_bond_more_message">Staking is currently inactive.\nCurrent minimal stake is %s.</string>
-    <string name="staking_alert_bond_more_title">Bond more tokens.</string>
     <string name="staking_alert_change_validators">Change your validators.</string>
     <string name="staking_alert_no_alerts_now">Everything is fine now. Alerts will appear here.</string>
     <string name="staking_alert_redeem_title">Redeem unstaked tokens</string>
@@ -1078,7 +1084,6 @@
     <string name="staking_balance_title">Staking balance</string>
     <string name="staking_balance_title_v2_2_0">Balance</string>
     <string name="staking_bond_more_v1_9_0">Stake more</string>
-    <string name="staking_bonded_format">Bonded: %s</string>
     <string name="staking_bonded_inactive">You are neither nominating nor validating</string>
     <string name="staking_confirm_nominations" formatted="false">%s of %s</string>
     <string name="staking_confirm_selected_validators">Selected validators</string>
