--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">
+    <string name="staking_setup_amount_less_than_recommended">Recommended minimal stake to stably receive rewards is %s.</string>
+
     <string name="staking_alert_bond_more_title">Stake more tokens</string>
 <!--    <string name="staking_alert_bond_more_title">Bond more tokens.</string>-->
 
