Map locks for gov1 and gov2 (#782)
* Map locks for gov1 and gov2

* Update GovernanceSharedState.kt

--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -5,10 +5,14 @@
     <string name="delegate_search_result_count">search results: %d</string>
     <string name="delegate_search_hint">Search by address or name</string>
 
-    <!--
-        <string name="staking_reward_payouts_payout_all">Pay out all (%s)</string>
-        <string name="staking_pending_rewards_subtitle">You can pay them out yourself, when they are close to expire, but you will pay the fee</string>
-    -->
+    <!--<string name="assets_balance_details_locks_democrac">Democracy</string>-->
+    <string name="assets_balance_details_locks_democrac_v1">Governance v1</string>
+    <string name="assets_balance_details_locks_democrac_v2">OpenGov</string>
+
+<!--
+    <string name="staking_reward_payouts_payout_all">Pay out all (%s)</string>
+    <string name="staking_pending_rewards_subtitle">You can pay them out yourself, when they are close to expire, but you will pay the fee</string>
+-->
     <string name="staking_reward_payouts_payout_all">Pay out all (%s)</string>
     <string name="staking_pending_rewards_subtitle">You can pay them out yourself, when they are close to expire, but you will pay the fee</string>
 
@@ -460,7 +464,6 @@
     <string name="assets_select_send_your_wallets">Your wallets</string>
 
     <string name="assets_balance_details_locks_staking">Staking</string>
-    <string name="assets_balance_details_locks_democrac">Democracy</string>
     <string name="assets_balance_details_locks_vesting">Vesting</string>
     <string name="assets_balance_details_locks_phrelect">Elections</string>
 
