--- a/common/src/main/res/values-ru/strings.xml
+++ b/common/src/main/res/values-ru/strings.xml
@@ -421,12 +421,12 @@
     <string name="delegation_all_votes">Голоса за все время</string>
     <string name="delegation_delegate">Делегат</string>
     <string name="delegation_delegate_filter_all">Все аккаунты</string>
-    <string name="delegation_delegate_filter_individuals">Личные аккаунты</string>
+    <string name="delegation_delegate_filter_individuals">Персон</string>
     <string name="delegation_delegate_filter_organizations">Организации</string>
     <string name="delegation_delegate_hint_unlock">Период выхода из делегации начнется после ее отмены</string>
     <string name="delegation_delegate_hint_vote">Ваши голоса будут автоматически применяться вместе с голосами ваших делегатов</string>
     <string name="delegation_delegate_info">Информация о делегате</string>
-    <string name="delegation_delegate_type_individual">Личный аккаунт</string>
+    <string name="delegation_delegate_type_individual">Персона</string>
     <string name="delegation_delegate_type_organization">Организация</string>
     <string name="delegation_delegated_votes">Голоса делегаторов</string>
     <string name="delegation_delegations">Делегации</string>
