--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
 
     <string name="staking_alert_bond_more_title">Stake more tokens</string>
 
-    <string name="staking_alert_bond_more_message">Your stake is less then minimum of %s.\nHaving stake less than minimum increases chances of staking to not generate rewards</string>
+    <string name="staking_alert_bond_more_message">Your stake is less than minimum of %s.\nHaving stake less than minimum increases chances of staking to not generate rewards</string>
 
     <string name="staking_rebag_current_bag">Current queue slot</string>
     <string name="staking_rebag_new_bag">New queue slot</string>
