--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">
 
+    <string name="web3names_address_with_description">%s (%s)</string>
     <string name="web3names_invalid_recepient_title">Invalid recipient</string>
     <string name="web3names_service_unavailable_title">Error resolving w3n</string>
     <string name="web3names_service_unavailable_message">%1$s w3n services are unavailable. Try again later or enter the %1$s address manually</string>
