Wallet connect PoC

--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">
+    <string name="wallet_connect_title">Wallet Connect</string>
+    <string name="wallet_connect_scan_title">Scan Wallet Connect QR code</string>
+
     <string name="ethereum_function">Function</string>
     <string name="ethereum_contract">Contract</string>
     <string name="ethereum_contract_call">Contract call</string>
