--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="web3names_integrity_check_failed_title">Integrity check failed</string>
     <string name="web3names_integrity_check_failed_message">Nova detected issues with integrity of information about %1$s addresses. Please contact owner of %1$s to resolve integrity issues.</string>
 
+    <string name="web3names_unsupported_asset_title">Token %s is not supported yet</string>
+    <string name="web3names_unsupported_asset_message">Nova can\'t resolve code for token %s</string>
     <string name="common_unknown_error_title">Unknown error</string>
     <string name="common_unknown_error_message">Something went wrong. Please try again later.</string>
     <string name="web3names_address_with_description">%s (%s)</string>
@@ -17,7 +19,7 @@
     <string name="web3names_service_unavailable_message">%1$s w3n services are unavailable. Try again later or enter the %1$s address manually</string>
     <string name="web3names_recepient_not_found_message">%s not found</string>
     <string name="web3names_no_valid_recepient_found_message">No valid address was found for %s on the %s network</string>
-    <string name="web3names_identifiers_sheet_title">%s addresses for %s</string>
+    <string name="web3names_identifiers_sheet_title">%s addresses for w3n:%s</string>
 
     <string name="common_no_app_to_handle_intent">No suitable app found on device to handle this intent</string>
 
