Support unsupported tokens in w3n. Fixed identifier in error dialog (#868)
* Feature/equilibrium balances (#853)

* Sync balance

* Equilibrium asset balances sync

* Fixed pr notes

* Run ktlint

* Update FearlessLibExt.kt

* Equilibrium transfers (#856)

* Sync balance

* Equilibrium asset balances sync

* Equilibrium transfers

* Fixed pr notes

* Run ktlint

* Update FearlessLibExt.kt

* Update EquilibriumAssetTransfers.kt

* Update EquilibriumAssetTransfers.kt

* Feature/equilibrium history (#859)

* Sync balance

* Equilibrium asset balances sync

* Equilibrium transfers

* Fixed pr notes

* Run ktlint

* Update FearlessLibExt.kt

* Equilibrium asset history

* Update EquilibriumAssetHistory.kt

* Fixed focusable view in bottom sheet dialog (#865)

* TrajsactionStateMachine refactoring (#841)

* TrajsactionStateMachine refactoring

* Run ktlint

* Update OnFiltersChangedStateProvider.kt

* Support unsupported tokens in w3n. Fixed identifier in error dialog

* Update RealWeb3NamesRepository.kt

* Run ktlint

* Fixed transfering validation (#866)

* Fixed transfering validation

* Fixed naming

* Fixed dapps sorting + code refactoring (#867)

* Remove w3n: prefix from string

* Revert "Merge branch 'develop' into fix/w3n_polishing"

This reverts commit 935ded5227eb7c18e9beb6e5a022fcf0099934d0, reversing
changes made to 2be5d37e68ab8b40e90f29fb9111e2f50e9fa252.

--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="web3names_integrity_check_failed_title">Integrity check failed</string>
     <string name="web3names_integrity_check_failed_message">Nova detected issues with integrity of information about %1$s addresses. Please contact owner of %1$s to resolve integrity issues.</string>
 
+    <string name="web3names_unsupported_asset_title">Token %s is not supported yet</string>
+    <string name="web3names_unsupported_asset_message">Nova can\'t resolve code for token %s</string>
     <string name="common_unknown_error_title">Unknown error</string>
     <string name="common_unknown_error_message">Something went wrong. Please try again later.</string>
     <string name="web3names_address_with_description">%s (%s)</string>
