--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">
+
+    <string name="referenda_filters_header">Show</string>
+    <string name="referenda_filters_all">All referenda</string>
+    <string name="referenda_filters_not_voted">Not voted</string>
+    <string name="referenda_filters_voted">Voted</string>
+    <string name="common_filters">Filters</string>
+
     <string name="referenda_title">Referenda</string>
     <string name="referenda_search_toolbar_hint">Search by referendum title or ID</string>
     <string name="referenda_search_placeholder">No referenda with entered title or ID were found</string>
